# tp

./: .example.env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  compose.yaml  pyproject.toml  seed.py
.claude/: op-schema-reference.md
alembic/: env.py
alembic/versions/: 254964d334b9_allow_same_measure_with_different_time_.py  408359792a8f_redesign_schedule_and_care_visit_models.py  7c384d9f8b38_add_permissions_and_audit_entries_tables.py  a29830265be3_add_planned_start_time_to_carevisit_and_.py  d0c195e9238d_initial_schema.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ScoreRing.tsx  Sidebar.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: Customers.tsx  Dashboard.tsx  Employees.tsx  Login.tsx  Placeholder.tsx
frontend/src/pages/customers/: CustomerDetail.tsx  hooks.ts  types.ts
frontend/src/pages/schedules/: ScheduleDetail.tsx  ScheduleList.tsx  constants.ts  hooks.ts  types.ts
frontend/src/pages/schedules/components/: CreateVisitModal.tsx  (+19 more)
src/: api.py  api_core.py  config.py  database.py  dependencies.py  log_setup.py  models.py
src/absences/: __init__.py  admin_api.py  errors.py  public_api.py  repo.py  schemas.py
src/audit/: __init__.py  admin_api.py  repo.py  schemas.py
src/care_visits/: __init__.py  admin_api.py  errors.py  public_api.py  repo.py  schemas.py
src/customers/: __init__.py  admin_api.py  care_plan_api.py  care_plan_repo.py  care_plan_schemas.py  errors.py  repo.py  schemas.py
src/employees/: __init__.py  admin_api.py  errors.py  repo.py  schemas.py
src/idp/: __init__.py  core.py
src/idp/email_and_password/: api.py  repo.py
src/measures/: __init__.py  admin_api.py  errors.py  repo.py  schemas.py
src/permissions/: __init__.py  admin_api.py  dependencies.py  errors.py  repo.py  schemas.py
src/reports/: __init__.py  admin_api.py  repo.py  schemas.py
src/schedules/: __init__.py  admin_api.py  errors.py  planning.py  planning_schemas.py  public_api.py  repo.py  schemas.py
tests/: conftest.py  test_ping.py
tests/absences/: conftest.py  test_admin_api.py  test_public_api.py
tests/audit/: conftest.py  test_admin_api.py
tests/care_visits/: conftest.py  test_admin_api.py  test_public_api.py
tests/customers/: test_admin_api.py
tests/employees/: test_admin_api.py
tests/measures/: test_admin_api.py
tests/permissions/: conftest.py  test_admin_api.py  test_permission_checks.py
tests/reports/: conftest.py  test_admin_api.py
tests/schedules/: conftest.py  test_admin_api.py  test_public_api.py
