[project]
name = "tp"
version = "0.1.0"
description = "Schemaläggnings- och omsorgssystem för svensk äldreomsorg"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.9.2,<3",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy[postgresql-asyncpg]>=2.0.48",
    "starlette-context>=0.5.1",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.42.0",
]

[dependency-groups]
lint = [
    "ruff>=0.7.1,<0.8",
    "pyright>=1.1.407,<2",
]
test = [
    "pytest>=8.3.3,<9",
    "pytest-cov>=5.0.0,<6",
    "pytest-asyncio>=0.24.0,<0.25",
]
dev = [
    "ipython>=8.29.0,<9",
]

[tool.uv]
package = false
default-groups = ["lint", "test", "dev"]

[tool.ruff]
line-length = 89

[tool.ruff.lint]
extend-select = ["E501"]

[tool.pyright]
pythonPath = "src"

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "strict"
testpaths = ["src/", "tests/"]

[tool.coverage.run]
omit = [
    ".venv/*",
    "*/tests/*",
]
